--- a/PortfoiloAPI/appsettings.json
+++ b/PortfoiloAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=KAAN\\SQLEXPRESS;Initial Catalog=MyProjects;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "ConnStr"
   }
 }
